# DRAMHiT

./: .clang-format  .gitconfig  .gitignore  .gitmodules  1.txt  CMakeLists.txt  DESIGN.md  DIRECTORY_REMOTE.txt  FASTAParser.hpp  LICENSE  Makefile  README.md  SNOOP.txt  ac_kseq.cpp  ac_kseq.h  ac_kstream.cpp  amd_epyc_pmu.txt  beamercolorthemeox.sty  bq_tests.cpp  bqueue.c  bqueue_test.c  bqueue_tests.c  build_package.nix  bw  cas_kht.hpp  collect_all.sh  command_history.txt  compare_prefetch.sh  compile_commands.json  data_types.h  default.nix  diff.diff  draw_box.py  draw_time.py  dump.txt  figures_9_10.py  figures_9_10_graphs.py  first_run.sh  flake.nix  foo.txt  (+70 more)
.github/workflows/: build.yml  test.yml
auto-tests/: CMakeLists.txt  aggregation_test.cpp  find_inserted.cpp  hashmap_test.cpp  test_lib.cpp  test_lib.hpp  test_runner.cpp
auto-tests/input_reader/: CMakeLists.txt  container_test.cpp  fastq_test.cpp  fastx_test.cpp  file_test.cpp  input_reader_test_utils.hpp  iterator_test.cpp  kmer_test.cpp  reservoir_test.cpp  string_view_test.cpp
auto-tests/utils/: CMakeLists.txt  circular_buffer_test.cpp
doc/: 02-24.txt  6548_mem_analysis.md  DESIGN.md  Notes.md  TODO.md  memory_analysis.md
doc/directory_vs_snoop/: DIRECTORY.txt
doc/directory_vs_snoop_2/: DIRECTORY.txt  SNOOP.txt
doc/event_counters/: 2gb_baseline.txt  2gb_inlined.txt  32kb_baseline.txt  32kb_inlined.txt
doc/optimization-dual_socket/: remote_dramhit_base.txt  remote_dramhit_base_bucket.txt  remote_dramhit_base_bucket_simd.txt  remote_dramhit_new_bucket_simd.txt  remote_dramhit_new_bucket_simd_inline.txt  remote_dramhit_new_bucket_simd_inline_uniform.txt
doc/optimization-single_socket/: dramhit_base.txt  dramhit_base_bucket.txt  dramhit_base_bucket_simd.txt  dramhit_new_bucket_simd.txt  dramhit_new_bucket_simd_inline.txt  dramhit_new_bucket_simd_inline_uniform.txt
examples/: CMakeLists.txt  dump_kmer_hash.cpp  dump_zipf.cpp  dump_zipf_cdf.cpp  dump_zipf_freq.cpp  generate_dataset.cpp  most_freq_kmer.cpp  num_unique_kmer.cpp
garbages/: SNOOP_REMOTE.txt  amd_epyc_pmu.txt  collect_all.sh  josh-notes.md  remote_test.sh  result.txt  test.py  test_msr_safe.c  writeback.sh
gtest/: CMakeLists.txt  hashtables.cpp
hashtables/: cas_kht.hpp  robinhood_kht.hpp  simple_kht.hpp  stdmap_kht.hpp
include/: AIO_Parser.hpp  Application.hpp  BQueueTest.hpp  CacheMissTest.hpp  Distribution.hpp  Latency.hpp  LockTest.hpp  MsrHandler.hpp  PCMCounter.hpp  PapiEvent.hpp  ParserTest.hpp  PerfMultiCounter.hpp  PrefetchTest.hpp  RWRatioTest.hpp  SynthTest.hpp  ZipfianTest.hpp  ac_kseq.h  ac_kseq.hpp  ac_kstream.h  ac_kstream.hpp  all_ht_types.hpp  base_kht.hpp  bqueue.h  calcstats.h  constants.h  constants.hpp  data_types.h  dbg.hpp  experiments.hpp  fastrange.h  fnv_hash.h  hasher.hpp  helper.hpp  kmer_class.h  kmer_class.hpp  kseq.h  libfipc.h  logger.h  logging.hpp  mem_bw_papi.hpp  (+11 more)
include/argparse/: hashjoin.hpp
include/distribution/: common.h  rand.h
include/hashtables/: array_kht.hpp  array_kht_single.hpp  base_kht.hpp  batch_inserter.hpp  cas23_kht.hpp  cas_kht.hpp  cas_kht_single.hpp  cas_kht_st.hpp  clht_kht.hpp  dlht_kht.hpp  folklore_kht.hpp  forklore_kht.hpp  growt_kht.hpp  ht_helper.hpp  kvtypes.hpp  multi_kht.hpp  robinhood_kht.hpp  simple_kht.hpp  stdmap_kht.hpp  tbb_kht.hpp  umap_kht.hpp  uniform_kht.hpp
include/input_reader/: README.md  adaptor.hpp  container.hpp  counter.hpp  csv.hpp  eth_rel_gen.hpp  fastq.hpp  fastx.hpp  file.hpp  input_reader.hpp  input_reader_base.hpp  iterator.hpp  kmer.hpp  repeater.hpp  reservoir.hpp  span.hpp  string_view.hpp  xorwow.hpp  zipfian.hpp
include/libfipc/: libfipc.h  libfipc_platform.h  libfipc_platform_internal.h  libfipc_platform_types.h  libfipc_test.h  libfipc_test_config.h  libfipc_test_shm.h  libfipc_test_stat.h  libfipc_test_thread.h  libfipc_test_time.h  libfipc_types.h
include/queues/: bqueue_aligned.hpp  bqueue_stock.hpp  lynxq.hpp  queue.hpp  section_queues.hpp
include/tests/: BQueueTest.hpp  BandwidthTest.hpp  CacheMissTest.hpp  HashjoinTest.hpp  KmerTest.hpp  ParserTest.hpp  PrefetchTest.hpp  QueueTest.hpp  SynthTest.hpp  UniformTest.hpp  ZipfianTest.hpp  tests.hpp
include/utils/: circular_buffer.hpp  hugepage_allocator.hpp  hugepage_arena.hpp  profiler.hpp  vtune.hpp
include/xx/: xxh3.h  xxhash.h
jerry/: base  baseline  baseline.c  partition.c
lib/: CMakeLists.txt
lib/gtest/: default.nix
scripts/: amd-perf-setup.sh  build_pcm.sh  change_device.sh  compare_pmu_results.py  constant_freq.sh  constant_freq_amd.sh  dir_writeback_graph.py  enable_hugepages.sh  enable_msr_safe.sh  estimate_zipf.py  fastq-splitter.pl  generate-rw-runs.py  generate_random_inst.py  generated_prefetches.h  get_hugepages.sh  get_perf_list.sh  hugetlbfs_mounted_at.c  install_papi.sh  install_tbb.sh  install_vtune.sh  min-setup.sh  numa_test.c  papi-parser.py  plot-10-90.py  plot_directory_vs_snoop.py  plot_fill_factor.py  plot_snapshot.py  plot_spill.py  pollutions.py  prefetch_control.sh  prefetch_control_amd.sh  prefetch_latency.c  prefetch_test.c  prefetch_test_jerry.c  run-queues.sh  run-rw.sh  run.py  run_ht_simulation.sh  run_pmu_counter.py  run_test.sh  (+15 more)
scripts/dataset_download/: dm.txt  download.sh  download_sra_tools.sh  fragaria_vesca.txt  gg.txt  hs1.txt  hs2.txt  kmerind.txt  mb.txt  tpchgen.sh
scripts/eurosys_2026/: TODO.md  collect_optimization_pass.sh  collect_reprobe_stats.sh  lfb_test.c  mops_helper.py  nohup.out  run_all.sh  run_lfb_test.py  run_rpq_test.py
scripts/graph/: figures_9_10.py  hashjoin.py  time_vs_k.py  time_vs_threads.py
scripts/other_papers_scripts/: run_gerbil.sh  run_kmerind.sh
src/: Application.cpp  Latency.cpp  ac_kseq.cpp  ac_kstream.cpp  bq_tests.cpp  bqueue.c  bqueue.cpp  bqueue_test.c  dramhit.cpp  hashtable_tests.cpp  kmer_data.cpp  kmercounter.cpp  kvstore.cpp  logging.cpp  main.cpp  misc_lib.cpp  parser_tests.cpp  types.cpp  xorwow.cpp  zipf_distribution.cpp
testfiles/: turkey_1000.fna
tools/mlc/: mlc
unittests/: CMakeLists.txt  aggregation_test.cpp  hashmap_test.cpp  test_lib.cpp  types_test.cpp
(+528 files in other folders)
